--- a/redis.conf
+++ b/redis.conf
@@ -36,6 +36,9 @@
 # Note that Redis will write a pid file in /var/run/redis.pid when daemonized.
 daemonize no
 
+#By default Redis can serve flushall & flushdb command, Use 'no' if you use
+#in online environment, and you do not need support flush.
+flushable yes
 # When running daemonized, Redis writes a pid file in /var/run/redis.pid by
 # default. You can specify a custom pid file location here.
 pidfile /var/run/redis.pid
