add config Command's whitelist ip.

--- a/redis.conf
+++ b/redis.conf
@@ -43,6 +43,10 @@ flushable yes
 # default. You can specify a custom pid file location here.
 pidfile /var/run/redis.pid
 
+# by default, if not set configaddress, the configaddress = NULL, all ip can command Config,
+# if it was set, ips can not command config except the assigned ip value.
+configaddress 127.0.0.1
+
 # Accept connections on the specified port, default is 6379.
 # If port 0 is specified Redis will not listen on a TCP socket.
 port 6379
